[gd_scene load_steps=2 format=2]

[ext_resource path="res://Login.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="login" type="Button" parent="."]
margin_left = 90.0
margin_top = 146.0
margin_right = 216.0
margin_bottom = 166.0
text = "entrar"

[node name="register" type="Button" parent="."]
margin_left = 99.0
margin_top = 113.0
margin_right = 209.0
margin_bottom = 133.0
text = "registrar"

[node name="email" type="LineEdit" parent="."]
margin_left = 86.0
margin_top = 22.0
margin_right = 227.0
margin_bottom = 46.0

[node name="password" type="LineEdit" parent="."]
margin_left = 86.0
margin_top = 58.0
margin_right = 229.0
margin_bottom = 82.0

[node name="delete" type="Button" parent="."]
margin_left = 250.0
margin_top = 90.0
margin_right = 303.0
margin_bottom = 110.0
text = "deletar"

[connection signal="pressed" from="login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="register" to="." method="_on_register_pressed"]
[connection signal="pressed" from="delete" to="." method="_on_delete_pressed"]
